# VerseMind-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_CN.md  check-backend-duplicate.ps1  check-doc-status.ps1  cleanup-backend-duplicate.ps1  cleanup-redundant-dirs.ps1  consolidate-docs.ps1  docker-compose.yml  force-remove-backend-duplicate.ps1  migrate-all-docs.ps1  pyproject.toml  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  test_embedding_fix.ps1  test_embedding_fix_clean.ps1
.github/workflows/: ci.yml  ci_complete.yml  ruff-lint.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  test_dimensions.py
backend/app/api/: chunks.py  config.py  conversation.py  debug.py  debug_storage.py  documents.py  embeddings.py  generate.py  health.py  index.py  mcp.py  n8n_router.py  parse.py  search.py
backend/app/core/: config.py  logger.py
backend/app/mcp/: __init__.py  mcp_http_handler.py  mcp_server_manager.py  versemind_mcp_service.py  versemind_native_mcp.py
backend/app/services/: chunk_service.py  conversation_service.py  embed_service.py  generate_service.py  index_service.py  llm_service.py  load_service.py  parse_service.py  search_service.py
backend/app/utils/: test_cleanup.py
backend/scripts/: clean_storage_docs.py  fix_blank_lines.py  simple_cleanup.py
backend/tests/: conftest.py  new_test.py  test_api.py  test_pdf_extraction.py  test_services.py
config/: README.md  README_CN.md  config.example.toml  config.toml
docs/: VerseMind-RAG 系统架构设计.md  logging_configuration.md  logging_configuration_CN.md  user_guide.md
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Header.jsx  IndexingForm.jsx  MainContent.jsx  Sidebar.jsx
frontend/src/components/modules/: ChatInterface.jsx  ChunkFileModule.jsx  DocumentContextDisplay.jsx  EmbeddingFileModule.jsx  EmbeddingForm.jsx  EmbeddingTable.jsx  GenerationModule.jsx  IndexingModule.jsx  LoadFileModule.jsx  ParseFileModule.jsx  SearchModule.jsx  StorageInfoPanel.jsx
frontend/src/config/: models.js
frontend/src/contexts/: LanguageContext.jsx
frontend/src/custom_components/: WechatDownloader.jsx
frontend/src/services/: api.js
frontend/src/utils/: configLoader.js  logger.js
frontend/tests/: App.test.jsx
milvus-docker/tools/: create_milvus_collection.py  drop_milvus_collection.py  list_milvus_collections.py  query_milvus.py
my-n8n/: docker-compose.yml
