[tool.poetry]
name = "versemind-rag-backend"
version = "0.1.0"
description = "Backend services for VerseMind-RAG"
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false  # disable packaging, only manage dependencies

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.115.12"
uvicorn = "0.34.0"
python-multipart = "0.0.20"
pydantic = "2.11.3"
pymupdf = "1.24.0"
python-docx = "1.1.0"
langchain = "*"
# chromadb and chroma-hnswlib removed due to Windows build issues; install via pip/conda when needed
ollama = "0.1.6"
openai = "1.12.0"
requests = "2.31.0"
numpy = "1.26.0"
pandas = "2.2.2"
toml = "0.10.2"
# pdfplumber = "*"
pillow_heif = "*"
matplotlib = "*"
torchaudio = "*"
pdf2image = "*"
"pdfminer.six" = "20201018"
pycryptodome = "*"
pypdf = "*"
pymilvus = "^2.3.0"  # Milvus Python client
grpcio = "^1.54.0"  # gRPC runtime for Milvus client
protobuf = "*"  # Protocol buffers support

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
